Instal cors-types,validationpipe,update app.module.ts

--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/cors": "^2.8.17",
+    "class-transform": "^0.7.0",
+    "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "mysql2": "^3.9.2",
     "prisma": "^5.10.2",
     "reflect-metadata": "^0.1.13",
