--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^5.10.2",
     "@types/cors": "^2.8.17",
     "class-transform": "^0.7.0",
     "class-validator": "^0.14.1",
