--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.10.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "bcryptjs": "^2.4.3",
     "class-transform": "^0.7.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
