--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.10.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/passport-local": "^1.0.34",
     "bcryptjs": "^2.4.3",
     "class-transform": "^0.7.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "mysql2": "^3.9.2",
+    "passport-local": "^1.0.0",
     "prisma": "^5.10.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
